deploy/kubernetes/base/services.yml
apiVersion: v1
kind: Service
metadata:
  name: dcarbn-backend-stable
  namespace: dcarbn
  labels:
    app.kubernetes.io/name: dcarbn-backend
spec:
  selector:
    app.kubernetes.io/name: dcarbn-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: dcarbn-backend-canary
  namespace: dcarbn
  labels:
    app.kubernetes.io/name: dcarbn-backend
spec:
  selector:
    app.kubernetes.io/name: dcarbn-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: dcarbn-frontend-stable
  namespace: dcarbn
  labels:
    app.kubernetes.io/name: dcarbn-frontend
spec:
  selector:
    app.kubernetes.io/name: dcarbn-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: dcarbn-frontend-canary
  namespace: dcarbn
  labels:
    app.kubernetes.io/name: dcarbn-frontend
spec:
  selector:
    app.kubernetes.io/name: dcarbn-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
